# build-system

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  bintray_settings.json
lib/: CMakeLists.txt
lib/calculate/: CMakeLists.txt  lib.cpp  lib.h
lib/version/: CMakeLists.txt  version.h.in
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_lib.cpp
